--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,6 +6,6 @@ metadata:
   labels:
     app: example
 spec:
-  type: service
+  type: website
   owner: user:default/skitamura7446
   lifecycle: production
