--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -16,7 +16,7 @@ metadata:
       title: App Repository
       icon: github
   annotations:
-    backstage.io/kubernetes-id: sample-blog
+    backstage.io/kubernetes-label-selector:　'app=my-app'
     backstage.io/kubernetes-namespace: sample-blog
 spec:
   type: website
